--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,49 @@
         #d7337a
     */
 }
+
+/*  RESET default browser styles  */
+*{
+  margin:  0 ; padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+}
+
+body{
+  font-family: var(--font-name);
+}
+
+h1, h2, h3{
+  font-weight: 700;
+}
+
+section{  padding: 50px 0px;  }
+
+a{
+  text-decoration: none;
+  color: unset;
+}
+
+a:hover{  color: unset;  }
+
+/*  Reusable class  */
+.container{
+  width: 1140px;
+  padding: 0px 15px;
+  margin: auto;
+}
+
+.section_title{
+  color: var(--heading-color);
+  font-weight: 700;
+}
+
+
+
+
+
+
+
+
+
+
